@@ -1,6 +1,6 @@
 Package: phyloseq
-Version: 1.5.0
-Date: 2013-03-21
+Version: 1.5.3
+Date: 2013-04-16
 Title: Handling and analysis of high-throughput microbiome
     census data.
 Description: phyloseq provides a set of classes and tools
@@ -12,25 +12,25 @@ Author: Paul J. McMurdie <mcmurdie@stanford.edu>, Susan
     from Gregory Jordan and Scott Chamberlain
 License: AGPL-3
 Imports:
-    ape (>= 3.0.7),
-    Biostrings (>= 2.26.3),
+    ape (>= 3.0.8),
+    Biostrings (>= 2.29.0),
     foreach (>= 1.4),
-    ggplot2 (>= 0.9.3),
-    igraph0 (>= 0.5.6),
-    multtest (>= 2.14),
+    ggplot2 (>= 0.9.3.1),
+    igraph0 (>= 0.5.7),
+    multtest (>= 2.17.0),
     plyr (>= 1.8),
     reshape (>= 0.8.4),
-    RJSONIO (>= 1.0.1),
+    RJSONIO (>= 1.0.3),
     scales (>= 0.2.3),
-    vegan (>= 2.0.6)
+    vegan (>= 2.0.7)
 Depends:
-    R (>= 2.15.2),
+    R (>= 3.0.0),
     methods,
-    ade4 (>= 1.4.17),
+    ade4 (>= 1.5.2),
     picante (>= 1.5.2)
 Suggests:
-    genefilter (>= 1.40),
-    testthat (>= 0.7)
+    genefilter (>= 1.43.0),
+    testthat (>= 0.7.1)
 Enhances: doParallel (>= 1.0.1)
 biocViews: Clustering, Classification, MultipleComparisons,
     QualityControl, GeneticVariability,
