@@ -18,6 +18,15 @@ phyloseq
 * Lots of documentation updates.
 * Lots and lots of fixes and improvements.
 
+phyloseq 1.5.3 - bug fix in plot_heatmap labels derived from ggplot2 change
+===========
+
+phyloseq 1.5.2 - bug fix pass extra args to transform_sample_counts
+===========
+
+phyloseq 1.5.0 - Level up to R version 3.0.0
+===========
+
 phyloseq 1.3.23 - bug fix for transform_sample_counts
 ===========
 Only appears to affect OTU tables in the "taxa are columns" orientation.
